tests/ui/concurrent_cached_ttl_millis_create_conflict.stderr
error: cannot specify `ttl_millis` when passing a `create` block - `create` fully constructs the store, so these store-builder attributes would be silently ignored
  --> tests/ui/concurrent_cached_ttl_millis_create_conflict.rs:12:4
   |
12 | fn my_fn(k: i32) -> Result<i32, String> {
   |    ^^^^^
